fix loads of neoforge stuffs